--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/siema": "^1.4.8",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
-    "svelte": "^4.0.5",
+    "rollup-plugin-svelte": "^7.1.6",
+    "svelte": "^4.2.0",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
@@ -25,7 +26,7 @@
   },
   "type": "module",
   "dependencies": {
-    "siema": "^1.5.1",
+    "svelte-carousel": "^1.0.25",
     "svelte-icons": "^2.1.0"
   }
 }
