--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "type": "module",
   "dependencies": {
+    "siema": "^1.5.1",
     "svelte-carousel": "^1.0.25",
     "svelte-icons": "^2.1.0"
   }
